Fixed issue where workflow logs header sometimes scrolled out of view.

--- a/pocs/dag-ui-angular/src/app/workflow/workflow.component.scss
+++ b/pocs/dag-ui-angular/src/app/workflow/workflow.component.scss
@@ -31,8 +31,6 @@ app-logs {
   right: 0;
   top: 0;
   height: 100vh;
-
-  overflow: scroll;
 }
 
 .yaml-root {
